tests/baselines/reference/nullKeyword.errors.txt
==== tests/cases/compiler/nullKeyword.ts (1 errors) ====
    null.foo;
         ~~~
!!! error TS2339: Property 'foo' does not exist on type 'null'.